fixed overlap issue

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,7 +7,7 @@
   font-size: 32px;
   text-align: center;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   width: 100%;
 }
 ::ng-deep ngb-typeahead-window {
